--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
 </head>
 
 <body>
-  <div class="cardArea">
     <div class="card">
       <div>
-        <img src="images/image-qr-code.png" alt="" class="codeImg">
+        <img src="images/image-qr-code.png" alt="QR code to frontendmentor.io" class="codeImg">
       </div>
-      <div class="p1">
+      <h1 class="p1">
         Improve your front-end skills by building projects
-      </div>
-      <div class="p2">
+      </h1>
+      <p class="p2">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </div>
+      </p>
     </div>
-  </div>
 </body>
 
 </html>
